fix: center align items in site header for improved layout

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: column;
   gap: v.$space-3;
-  align-items: stretch;
+  align-items: center;
 
   @include m.breakpoint(tablet) {
     flex-direction: row;
